[gd_scene load_steps=6 format=3 uid="uid://favhs78gq3v4"]

[ext_resource type="Script" uid="uid://hils326jj853" path="res://scripts/end.gd" id="1_3d26k"]
[ext_resource type="Theme" uid="uid://n7d22alloqdb" path="res://resources/default.tres" id="1_mwn6m"]

[sub_resource type="Animation" id="Animation_3d26k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/Return:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer/Quit:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_mwn6m"]
resource_name = "Ready"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/Return:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer/Quit:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.96),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p7m4f"]
_data = {
&"RESET": SubResource("Animation_3d26k"),
&"Ready": SubResource("Animation_mwn6m")
}

[node name="End" type="Node2D"]
z_index = 29
script = ExtResource("1_3d26k")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -10
offset_left = -120.0
offset_top = -89.0
offset_right = 116.0
offset_bottom = 86.0
color = Color(0, 0, 0, 1)

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = -7
position = Vector2(0, -84)
amount = 10
lifetime = 2.0
emission_shape = 3
emission_rect_extents = Vector2(120, 1)
gravity = Vector2(0, 100)
scale_amount_min = 0.5
scale_amount_max = 3.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -1)
zoom = Vector2(3, 3)

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
z_index = -2
offset_left = -45.0
offset_top = -73.0
offset_right = 45.0
offset_bottom = 26.0

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2

[node name="ColorRect2" type="ColorRect" parent="MarginContainer/ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 88.0
offset_bottom = 97.0
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("1_mwn6m")
theme_override_constants/separation = -4

[node name="Label1" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Score:"
horizontal_alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3137255, 0.85490197, 0.89411765, 1)
horizontal_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9019608, 0.8627451, 0.08235294, 1)
horizontal_alignment = 1

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.75686276, 0.38431373, 1)
horizontal_alignment = 1

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.07450981, 0.16078432, 1)
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = -39.0
offset_top = 34.0
offset_right = 40.0
offset_bottom = 74.0
theme = ExtResource("1_mwn6m")

[node name="Return" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Return to Menu"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_p7m4f")
}
autoplay = "Ready"

[connection signal="pressed" from="VBoxContainer/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
